Fix visual error on sidenav (horizontal scroll)

--- a/src/app/main-nav/main-nav.component.css
+++ b/src/app/main-nav/main-nav.component.css
@@ -58,8 +58,10 @@
   color: white;
   font-size: 16px;
   font-weight: 300;
-  padding: 0px 32px !important;
+  margin-left: 34px;
+  padding: 0px 0px !important;
   height: 25px !important;
+  width: 80% !important;
 }
 
 .search-container {
